service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: cruzbit
  name: cruzbit
spec:
  ports:
    - protocol: TCP
      port: 8831
      targetPort: 8831
  selector:
    run: cruzbit
  type: NodePort
