ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cruzbit-ingress
spec:
  backend:
    serviceName: cruzbit
    servicePort: 8831
